--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,8 @@
 *.exe
 *.out
 *.app
+Numeric method Newton.xcodeproj/project.pbxproj
+Numeric method Newton.xcodeproj/project.xcworkspace/contents.xcworkspacedata
+Numeric method Newton.xcodeproj/project.xcworkspace/xcuserdata/maksimmozgovoj.xcuserdatad/UserInterfaceState.xcuserstate
+Numeric method Newton.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+Numeric method Newton.xcodeproj/xcuserdata/maksimmozgovoj.xcuserdatad/xcschemes/xcschememanagement.plist
